<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group_internet_storage_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/internet_local_switch"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_internet_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/internet_source"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_storage_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/storage_source"
            android:textColor="@android:color/white" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/gradient_background" />

    <RadioGroup
        android:id="@+id/radio_group_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/radio_group_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/radio_button_popular"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/radio_button_top_rated"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/radio_button_upcoming"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/radio_button_playing"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/gradient_background" />

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/request_language_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_lang_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/language_ru"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_lang_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/language_en"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/gradient_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/storage_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/gradient_background_delete_button"
        android:clickable="true"
        android:text="@string/delete_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_save_movie_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/save_movie_mod"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/rating_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_release_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="0"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar_release_rating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:max="10"
            android:min="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/date_save_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="1950"
                android:textColor="@color/orange"
                android:textSize="20sp" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBaк_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:max="2030"
            android:min="1950" />
    </LinearLayout>

</LinearLayout>